<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_AAA"
            style="@style/AppTheme.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_default"
            android:text="@string/btn_aaa"
            android:theme="@style/AppTheme.Button" />

        <Button
            android:id="@+id/btn_BBB"
            style="@style/AppTheme.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_default"
            android:text="@string/btn_bbb"
            android:theme="@style/AppTheme.Button" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_divider"
        android:background="@color/colorGreyDark" />

    <LinearLayout
        android:id="@+id/middle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <include layout="@layout/view_history_item" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_divider"
        android:background="@color/colorGreyDark" />

    <RelativeLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_connected_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/margin_default"
            android:visibility="gone"
            tools:text="Connected to: 192.168.1.35" />

        <LinearLayout
            android:id="@+id/connection_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="visible">

            <EditText
                android:id="@+id/et_ip_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_default"
                android:background="@drawable/rect_white_border_grey"
                android:digits="0123456789."
                android:hint="@string/hint_ip"
                android:imeOptions="flagNoExtractUi|actionDone"
                android:inputType="numberDecimal"
                android:minWidth="@dimen/width_edit_text"
                android:text="@string/hint_ip" />

            <Button
                android:id="@+id/btn_connect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_connect"
                android:theme="@style/AppTheme.Button.Colored" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_device_ip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:textColor="@color/colorBlueDark"
            android:textSize="12sp"
            tools:text="@string/msg_device_ip" />

    </RelativeLayout>
</LinearLayout>